# rmp-cpp

./: .gitignore  CmakeLists.txt  README.md  hoge.txt  make_plot.ipynb
baxter/include/: baxter.hpp
baxter/src/: CMakeLists.txt  JRx.cpp  JRx_dot.cpp  JRy.cpp  JRy_dot.cpp  JRz.cpp  JRz_dot.cpp  Jo.cpp  Jo_dot.cpp  Rx.cpp  Ry.cpp  Rz.cpp  baxter.cpp  baxtr.cpp  htms.cpp  jo_0.cpp  jo_0_dot.cpp  jo_1.cpp  jo_1_dot.cpp  jo_2.cpp  jo_2_dot.cpp  jo_3.cpp  jo_3_dot.cpp  jo_4.cpp  jo_4_dot.cpp  jo_5.cpp  jo_5_dot.cpp  jo_6.cpp  jo_6_dot.cpp  jo_BR.cpp  jo_BR_dot.cpp  jo_W0.cpp  jo_W0_dot.cpp  jo_ee.cpp  jo_ee_dot.cpp  jrx_0.cpp  jrx_0_dot.cpp  jrx_1.cpp  jrx_1_dot.cpp  jrx_2.cpp  (+96 more)
baxter/test/: CMakeLists.txt  main.cpp
config/: franka_sphere.json  sice.json
include/: environment.hpp  mappings.hpp  model_simple_arm.hpp  node.hpp  rmp.hpp  rmp2_attractor_xi.hpp  rmp2_attractor_xi_2d.hpp  rmp2_attractor_xi_3d.hpp  rmp_leaf.hpp  rmp_multi.hpp  rmp_node.hpp  rmp_tree.hpp  robot_model_baxter.hpp  robot_model_sice.hpp  simulator.hpp  visualization.hpp  wrapper.hpp  xi.hpp
include/baxter/: JRx.h  JRx_0.h  JRx_1.h  JRx_2.h  JRx_3.h  JRx_4.h  JRx_5.h  JRx_6.h  JRx_BR.h  JRx_W0.h  JRx_dot.h  JRx_dot.hpp  JRx_dot_0.h  JRx_dot_1.h  JRx_dot_2.h  JRx_dot_3.h  JRx_dot_4.h  JRx_dot_5.h  JRx_dot_6.h  JRx_dot_BR.h  JRx_dot_W0.h  JRx_dot_ee.h  JRx_ee.h  JRy.hpp  JRy_0.h  JRy_1.h  JRy_2.h  JRy_3.h  JRy_4.h  JRy_5.h  JRy_6.h  JRy_BR.h  JRy_W0.h  JRy_dot.hpp  JRy_dot_0.h  JRy_dot_1.h  JRy_dot_2.h  JRy_dot_3.h  JRy_dot_4.h  JRy_dot_5.h  (+182 more)
misc/: rmp2_attractor_xi_3d.hpp
misc/baxter/: derivation.ipynb  hpp.txt  metapro.ipynb  void.txt
misc/hoge_class/: CMakeLists.txt  class.cpp  classh.hpp  main.cpp
misc/hoge_eigen/: main.cpp
misc/hoge_func_ptr/: CMakeLists.txt  main.cpp
misc/hoge_hello/: CMakeLists.txt  hello.cpp
misc/hoge_hpp/: CMakeLists.txt  main.cpp  module.cpp
misc/hoge_tree/: CMakeLists.txt  main.cpp  node.cpp  node.hpp
misc/hoge_vector/: CMakeLists.txt  main.cpp
misc/json_test/: CMakeLists.txt  main.cpp
misc/make_src__attractor_xi/: CMakeLists.txt  code_generater.py  generate_s_sr.ipynb  hoge.cpp  hoge.hpp  test.cpp
misc/make_src_of_rmp_func/: attractor.py  curvature_ccode_generator.py  generate_s_sr.ipynb  obs.py
misc/ref_vector/: main.cpp
misc/thread_test/: CMakeLists.txt  main.cpp
notebook/: basic_plot.ipynb
py/: test_baxter.py  test_sice.py
robot_model_baxter/include/: baxter.hpp
robot_model_baxter/src/: baxter.cpp  htms.cpp  jo_0.cpp  jo_0_dot.cpp  jo_1_dot.cpp  jo_3.cpp  jo_3_dot.cpp  jo_5.cpp  jo_5_dot.cpp  jo_6_dot.cpp  jo_BR.cpp  jo_BR_dot.cpp  jo_W0.cpp  jo_ee.cpp  jo_ee_dot.cpp  jrx_0_dot.cpp  jrx_1.cpp  jrx_2.cpp  jrx_2_dot.cpp  jrx_5_dot.cpp  jrx_W0.cpp  jry_0_dot.cpp  jry_2.cpp  jry_3_dot.cpp  jry_4_dot.cpp  jry_BR_dot.cpp  jry_W0.cpp  jry_ee.cpp  jry_ee_dot.cpp  jrz_0.cpp  jrz_1_dot.cpp  jrz_3.cpp  jrz_4.cpp  jrz_4_dot.cpp  jrz_5_dot.cpp  jrz_6.cpp  jrz_BR_dot.cpp  jrz_ee_dot.cpp  o_2.cpp  o_4.cpp  (+18 more)
robot_model_baxter/test/: CMakeLists.txt  main.cpp
robot_model_franka_emika/include/: franka_emika.hpp
robot_model_franka_emika/src/: cpoint.cpp  franka_emika.cpp  jo_0.cpp  jo_0_dot.cpp  jo_1.cpp  jo_1_dot.cpp  jo_2.cpp  jo_2_dot.cpp  jo_3.cpp  jo_3_dot.cpp  (+88 more)
src/: CMakeLists.txt  environment.cpp  mappings.cpp  model_simple_arm.cpp  node.cpp  rmp.cpp  rmp2_attractor_xi.cpp  rmp2_attractor_xi_2d.cpp  rmp2_attractor_xi_3d.cpp  rmp_leaf.cpp  rmp_multi.cpp  rmp_node.cpp  rmp_tree.cpp  robot_model_baxter.cpp  robot_model_sice.cpp  simulator.cpp  viaualization.cpp  wrapper.cpp  xi.cpp
test/: CMakeLists.txt  pinv_check.jl  plot.ipynb  test.cpp  test.csv
test/baxter/: CMakeLists.txt  main.cpp
test/franka_emika/: CMakeLists.txt  main.cpp
test/sice/: CMakeLists.txt  main.cpp  plot.ipynb  plot_test.py  test.cpp
test/tree_simu/: CMakeLists.txt  main.cpp
test_py/: mappings.py  rmp_leaf.py  rmp_tree.py  robot_model_sice.py  test.py  visualization.py
test_simple/: CMakeLists.txt  main.cpp
(+677 files in other folders)
